deploy/ratemygm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratemygm
  labels:
    app: ratemygm
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratemygm
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ratemygm
        tier: frontend
    spec:
      containers:
      - name: ratemygm
        image: <IMAGE>
        ports:
        - name: entry
          containerPort: 3002
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
      imagePullSecrets:
        - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: ratemygm
spec:
  type: NodePort
  selector:
    app: ratemygm
    tier: frontend
  ports:
  - protocol: TCP
    port: 3002
    targetPort: entry
