deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ratemygamemaster.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ratemygm
            port:
              number: 3002
